# my-solana-projects

./: .gitignore  README.md
SimpleCounter/: Anchor.toml
SimpleCounter/app/: package-lock.json  package.json
SimpleCounter/app/src/: idl.json
SimpleCounter/programs/mysolanaapp/: Cargo.toml
SimpleCounter/programs/mysolanaapp/src/: lib.rs
SimpleCounter/tests/: mysolanaapp.js
Useful-Visuals/: AnchorDifferencesBetweenRPC-Transaction-Instruction.docx  Serialization.docx
buildspace/Solana-Core/Core-2/4. Make-Magic-Internet-Money-and-Sell-JPEGS/: buildoor_symlink
buildspace/Solana-Core/Core-3/3. Security-and-Validation/: solana-movie-frontend_symlink  solana-student-intros-frontend_symlink
buildspace/Solana-Core/Core-4/1. Local-Env-Setup-and-PDAs/: solana-movie-and-student-client_symlink
buildspace/Solana-Core/Core-4/1. Local-Env-Setup-and-PDAs/movie-review-comments/: Cargo.toml
buildspace/Solana-Core/Core-4/1. Local-Env-Setup-and-PDAs/movie-review-comments/src/: instruction.rs  processor.rs  state.rs
buildspace/Solana-Core/Core-5/2. Programs-in-Anchor/movie-review-anchor/programs/movie-review-anchor/: Cargo.toml
buildspace/Solana-Core/Core-5/2. Programs-in-Anchor/movie-review-anchor/programs/movie-review-anchor/src/: lib.rs
buildspace/solana-intro-client/src/: index.ts  indexShipChallenge.ts
solana-facebook/: Anchor.toml  README.md  package.json
solana-facebook/app/: package.json  tailwind.config.js
solana-facebook/app/src/api/: send-tweet.js
solana-facebook/programs/solana-facebook/: Cargo.toml
solana-facebook/tests/: solana-facebook.ts
(+196 files in other folders)
