[package]
name = "movie-review-anchor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "movie_review_anchor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.26.0", features = ["init-if-needed"]}
mpl-token-metadata = {version = "1.4.3", features = ["no-entrypoint"]}
anchor-spl = "0.26.0"
